--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,10 @@
 			<artifactId>tess4j</artifactId>
 			<version>5.11.0</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa-test</artifactId>
